fixed broken onClick on iOS

--- a/styles/media-queries.scss
+++ b/styles/media-queries.scss
@@ -40,8 +40,8 @@
   @media not screen and (max-width: $page-breakpoint-sm) {@content;}
 }
 
-@mixin media-mobile {
-  @media screen and (max-width: $page-width-mobile) {@content;}
+@mixin media-touch {
+  @media (any-hover: none) {@content;}
 }
 
 @mixin row-start-center($prefix: '') {
@@ -93,4 +93,8 @@
 
 @include media-not-lg {
   .not-lg-hide {display: none}
+}
+
+@include media-touch {
+  * {cursor: pointer}
 }
